50-eks-cluster/app/04-frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: roboshop
  labels:
    project: roboshop
    tier: frontend
    component: frontend
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:534409839269:certificate/dd8ee9af-fc98-4fcb-8c81-9472850c96a6"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=dev,Project=roboshop
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: roboshop
spec:
  ingressClassName: alb
  rules:
    - host: { { .Values.ingress.host } }
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend
                port:
                  number: 80
